[package]
name = "retasks"
version = "0.1.0"
edition = "2021"
authors = ["Eugen Soloviov (@suenot)"]
description = "A tool for synchronizing GitHub issues with a local directory"

[dependencies]
clap = "2.33.3"
octorust = "0.10.0"
hotwatch = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
